# rlm

./: .gitignore  README.md  pyproject.toml
rlm/: __init__.py  cli.py  client.py  prompts.py  repl_env.py  rlm_repl.py  utils.py
scripts/: 500_novel_corpus.json  500_novel_corpus.sh  500_novel_experiment.sh  build_500_corpus.py  gutenberg_experiment.sh  quickstart.sh  romantic_timeline_experiment.sh
scripts/500_novel_results/: run_20260415_121418.json  run_20260415_121418_analysis.md  run_20260415_121418_transcript.json
scripts/gutenberg_results/: run_20260409_110328.json  run_20260409_110328_analysis.md  run_20260409_110328_transcript.json
scripts/romantic_timeline_results/: run_20260409_125447.json  run_20260409_125447_transcript.json  run_20260409_133037.json  run_20260409_133037_transcript.json  run_20260409_133046.json  run_20260409_133046_analysis.md  run_20260409_133046_transcript.json
